    - Patch for update links in documentation.
  * Add debian/postrm for removing etc/default/squidguard. (Closes: #385093)
  * Add 'set -e' in debian/postinst.
  * Remove unusable and old manpages in debian directory.
  * Add new (rewritten) manual pages.
  * Some changes in package configuration files.
  * Split package: add config for squidguard-doc package.

 -- Joachim Wiedorn <ad_debian@joonet.de>  Wed, 02 Jun 2010 21:04:05 +0200

squidguard (1.2.0-9) unstable; urgency=high

  * Non-maintainer upload for security issues.
  * Security: fix buffer overflow in sgLog.c.
    Fixes: CVE-2009-3700.
  * Security: fix buffer overflow in sgDiv.c.
    Fixes: CVE-2009-3826.
  * Closes: #553319 (two security issues described above).
  * Setting maintained to QA.    
  
 -- Sebastien Delafond <seb@debian.org>  Fri, 30 Apr 2010 12:52:19 +0200

squidguard (1.2.0-8.4) unstable; urgency=low

  * Non-maintainer upload to fix pending l10n issues.
  * Debconf translations:
    - Russian. Closes: #476907
    - Turkish. Closes: #491747
    - Basque. Closes: #491866

 -- Christian Perrier <bubulle@debian.org>  Tue, 15 Jul 2008 23:19:16 +0200

squidguard (1.2.0-8.3) unstable; urgency=low

  * Non-maintainer upload to fix pending l10n issues.
  * Debconf translations:
    - Spanish. Closes: #415038, #414356
    - Dutch. Closes: #420928
    - Finnish. Closes: #473448
    - Galician. Closes: #473504
  * Also depend on squid3 as squidguard is reported to work with it
    Closes: #445458
  * Switch to db4.6. Closes: #442673
  * Remove debconf note about obsolete transition to db4.3
  * [Lintian] Switch debian/copyright to UTF-8

 -- Christian Perrier <bubulle@debian.org>  Mon, 31 Mar 2008 08:41:53 +0200

squidguard (1.2.0-8.2) unstable; urgency=low

  * Non-maintainer upload to fix pending translation issues
  * Debconf templates translations:
    - Portuguese. Closes: #388965

 -- Christian Perrier <bubulle@debian.org>  Thu,  1 Feb 2007 21:15:37 +0100
