@@ -2,7 +2,7 @@ Source: squidguard
 Section: web
 Priority: optional
 Maintainer: Joachim Wiedorn <ad_debian@joonet.de>
-Build-Depends: debhelper (>= 7.0.15), perl,
+Build-Depends: debhelper (>= 7.0.50), perl,
  libdb4.7-dev | libdb4.6-dev, bison, flex
 Standards-Version: 3.8.4
 Vcs-Git: git://git.debian.org/git/collab-maint/squidguard.git
